Create folder team
change photo for team
create folder portfolio

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <ul>
           <li>
             <img
-              src="./images/img-1.jpg"
+              src="./images/team/img-1.jpg"
               alt="a bearded brunette in a blue shirt"
               width="264"
               height="260" />
@@ -82,7 +82,7 @@
           </li>
           <li>
             <img
-              src="./images/img-2.jpg"
+              src="./images/team/img-2.jpg"
               alt="a russet-haired guy with a big smile"
               width="264"
               height="260" />
@@ -91,7 +91,7 @@
           </li>
           <li>
             <img
-              src="./images/img-3.jpg"
+              src="./images/team/img-3.jpg"
               alt="beautiful brunette in a pink sweater"
               width="264"
               height="260" />
@@ -100,7 +100,7 @@
           </li>
           <li>
             <img
-              src="./images/img-4.jpg"
+              src="./images/team/img-4.jpg"
               alt="a brunette with a small beard and a gray T-shirt"
               width="264"
               height="260" />
