--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
   <body>
     <header class="header">
       <nav>
-        <a href="./index.html" class="logo-text">WebStudio</a>
-        <ul>
-          <li><a href="" class="navigation">Studio</a></li>
-          <li><a href="" class="navigation">Portfolio</a></li>
-          <li><a href="" class="navigation">Contacts</a></li>
+        <a href="./index.html" class="logo-text">Web<span>Studio</span></a>
+        <ul class="navigation">
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="address">
-              info@devstudio.com
-            </a>
+            <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
           </li>
           <li>
-            <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -109,10 +107,45 @@
           </li>
         </ul>
       </section>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="" alt="" />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo-text">WebStudio</a>
+      <a href="./index.html" class="logo-text">Web<span>Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
