Add images in section Portfolio

--- a/index.html
+++ b/index.html
@@ -111,32 +111,50 @@
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul>
           <li>
-            <img src="" alt="" />
+            <img
+              src="./images/portfolio/img-1.jpg"
+              alt="menu illustrations in the appendix"
+              width="360" />
             <h3>Banking App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img
+              src="./images/portfolio/img-2.jpg"
+              alt="QR code scanning by phone"
+              width="360" />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img
+              src="./images/portfolio/img-3.jpg"
+              alt="smartphone in front of a laptop"
+              width="360" />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img
+              src="./images/portfolio/img-4.jpg"
+              alt="smartphone in the car"
+              width="360" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img
+              src="./images/portfolio/img-5.jpg"
+              alt="smartphone and 4 screensaver illustrations"
+              width="360" />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img
+              src="./images/portfolio/img-6.jpg"
+              alt="the girl with the smartphone in the orange sweater"
+              width="360" />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
