--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
 
   <body>
     <header class="header">
-      <nav>
-        <a href="./index.html" class="logo-text">Web<span>Studio</span></a>
-        <ul class="navigation">
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+      <nav class="header-navi">
+        <a href="./index.html" class="logo-text"
+          >Web<span class="header-logo-text">Studio</span></a
+        >
+        <ul class="navi-all-list">
+          <li class="navi-list"><a href="">Studio</a></li>
+          <li class="navi-list"><a href="">Portfolio</a></li>
+          <li class="navi-list"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
-        <ul>
-          <li>
+        <ul class="address-all-list">
+          <li class="address-list">
             <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
           </li>
-          <li>
+          <li class="address-list">
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -43,32 +45,32 @@
         <button type="button" class="slogan-button">Order Service</button>
       </section>
       <section class="description">
-        <h2 class="description-title">empty header</h2>
-        <ul>
-          <li>
-            <h3 class="description-section-title">Strategy</h3>
-            <p class="description-section-text">
+        <h2 class="descr-title">empty header</h2>
+        <ul class="descr-all-list">
+          <li class="descr-list">
+            <h3 class="descr-list-title">Strategy</h3>
+            <p class="descr-list-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3 class="description-section-title">Punctuality</h3>
-            <p class="description-section-text">
+          <li class="descr-list">
+            <h3 class="descr-list-title">Punctuality</h3>
+            <p class="descr-list-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3 class="description-section-title">Diligence</h3>
-            <p class="description-section-text">
+          <li class="descr-list">
+            <h3 class="descr-list-title">Diligence</h3>
+            <p class="descr-list-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3 class="description-section-title">Technologies</h3>
-            <p class="description-section-text">
+          <li class="descr-list">
+            <h3 class="descr-list-title">Technologies</h3>
+            <p class="descr-list-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -77,102 +79,104 @@
       </section>
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul>
-          <li>
+        <ul class="team-all-list">
+          <li class="team-list">
             <img
               src="./images/team/img-1.jpg"
               alt="a bearded brunette in a blue shirt"
               width="264"
               height="260" />
-            <h3 class="team-photo-title">Mark Guerrero</h3>
-            <p class="team-photo-descr">Product Designer</p>
+            <h3 class="team-list-title">Mark Guerrero</h3>
+            <p class="team-list-descr">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/team/img-2.jpg"
               alt="a russet-haired guy with a big smile"
               width="264"
               height="260" />
-            <h3 class="team-photo-title">Tom Ford</h3>
-            <p class="team-photo-descr">Frontend Developer</p>
+            <h3 class="team-list-title">Tom Ford</h3>
+            <p class="team-list-descr">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/team/img-3.jpg"
               alt="beautiful brunette in a pink sweater"
               width="264"
               height="260" />
-            <h3 class="team-photo-title">Camila Garcia</h3>
-            <p class="team-photo-descr">Marketing</p>
+            <h3 class="team-list-title">Camila Garcia</h3>
+            <p class="team-list-descr">Marketing</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/team/img-4.jpg"
               alt="a brunette with a small beard and a gray T-shirt"
               width="264"
               height="260" />
-            <h3 class="team-photo-title">Daniel Wilson</h3>
-            <p class="team-photo-descr">UI Designer</p>
+            <h3 class="team-list-title">Daniel Wilson</h3>
+            <p class="team-list-descr">UI Designer</p>
           </li>
         </ul>
       </section>
       <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul>
-          <li>
+        <h2 class="portfol-title">Our Portfolio</h2>
+        <ul class="portfol-all-list">
+          <li class="portfol-list">
             <img
               src="./images/portfolio/img-1.jpg"
               alt="menu illustrations in the appendix"
               width="360" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfol-list-title">Banking App</h3>
+            <p class="portfol-list-text">App</p>
           </li>
-          <li>
+          <li class="portfol-list">
             <img
               src="./images/portfolio/img-2.jpg"
               alt="QR code scanning by phone"
               width="360" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfol-list-title">Cashless Payment</h3>
+            <p class="portfol-list-text">Marketing</p>
           </li>
-          <li>
+          <li class="portfol-list">
             <img
               src="./images/portfolio/img-3.jpg"
               alt="smartphone in front of a laptop"
               width="360" />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfol-list-title">Meditation App</h3>
+            <p class="portfol-list-text">App</p>
           </li>
-          <li>
+          <li class="portfol-list">
             <img
               src="./images/portfolio/img-4.jpg"
               alt="smartphone in the car"
               width="360" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfol-list-title">Taxi Service</h3>
+            <p class="portfol-list-text">Marketing</p>
           </li>
-          <li>
+          <li class="portfol-list">
             <img
               src="./images/portfolio/img-5.jpg"
               alt="smartphone and 4 screensaver illustrations"
               width="360" />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfol-list-title">Screen Illustrations</h3>
+            <p class="portfol-list-text">Design</p>
           </li>
-          <li>
+          <li class="portfol-list">
             <img
               src="./images/portfolio/img-6.jpg"
               alt="the girl with the smartphone in the orange sweater"
               width="360" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfol-list-title">Online Courses</h3>
+            <p class="portfol-list-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo-text">Web<span>Studio</span></a>
+      <a href="./index.html" class="logo-text"
+        >Web<span class="footer-logo-text">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
