--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               width="264"
               height="260" />
             <h3 class="team-list-title">Mark Guerrero</h3>
-            <p class="team-list-descr">Product Designer</p>
+            <p class="team-list-text">Product Designer</p>
           </li>
           <li class="team-list">
             <img
@@ -96,7 +96,7 @@
               width="264"
               height="260" />
             <h3 class="team-list-title">Tom Ford</h3>
-            <p class="team-list-descr">Frontend Developer</p>
+            <p class="team-list-text">Frontend Developer</p>
           </li>
           <li class="team-list">
             <img
@@ -105,7 +105,7 @@
               width="264"
               height="260" />
             <h3 class="team-list-title">Camila Garcia</h3>
-            <p class="team-list-descr">Marketing</p>
+            <p class="team-list-text">Marketing</p>
           </li>
           <li class="team-list">
             <img
@@ -114,7 +114,7 @@
               width="264"
               height="260" />
             <h3 class="team-list-title">Daniel Wilson</h3>
-            <p class="team-list-descr">UI Designer</p>
+            <p class="team-list-text">UI Designer</p>
           </li>
         </ul>
       </section>
