--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           >Web<span class="header-logo-text">Studio</span></a
         >
         <ul class="navi-all-list">
-          <li class="navi-list"><a href="">Studio</a></li>
-          <li class="navi-list"><a href="">Portfolio</a></li>
-          <li class="navi-list"><a href="">Contacts</a></li>
+          <li><a href="./index.html" class="navi-list">Studio</a></li>
+          <li><a href="" class="navi-list">Portfolio</a></li>
+          <li><a href="" class="navi-list">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
