--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
       </nav>
       <address class="address">
         <ul class="address-all-list">
-          <li class="address-list">
-            <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
+          <li>
+            <a href="mailto:info@devstudio.com" class="address-list">
+              info@devstudio.com
+            </a>
           </li>
-          <li class="address-list">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li>
+            <a href="tel:+110001111111" class="address-list"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
